gcc/testsuite/g++.dg/cpp0x/lambda/lambda-ice4.C
// PR c++/47242
// { dg-do compile { target c++11 } }

template < typename > void
bar ()
{
  [i]{}; // { dg-error "declared|invalid" }
}

void
foo ()
{
  bar<int>();
}
